--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.3.0-alpha.3",
     "react-native": "0.54.3",
     "react-native-fontawesome": "^5.7.0",
+    "react-native-snap-slider": "^0.3.0",
     "styled-components": "^3.2.3"
   },
   "devDependencies": {
